--- a/src/style.css
+++ b/src/style.css
@@ -22,5 +22,5 @@ li a:hover:not(.active) {
   background-color: #111111;
 }
 .active {
-  background-color: #0000FF;
+  background-color: #0033cc;
 }
