Sort out some header styles for position, padding

--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,22 @@
-ul {
+body { margin: 0; }
+body>div>ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 0.5em;
   overflow: hidden;
   background-color: #333333;
-  position: fixed;
-  top: 0;
+  /* position: fixed; top: 0; */
   width: 100%;
 }
-li {
-  float: left;
-}
-li a {
+body>div>li { float: left; }
+body>div>li a {
   display: block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
-li a:hover:not(.active) {
+body>div>li a:hover:not(.active) {
   background-color: #111111;
 }
 .active {
