Finish sorting a problem - sub-menus now work

--- a/src/style.css
+++ b/src/style.css
@@ -9,14 +9,16 @@ body>div>ul {
   width: 100%;
 }
 body>div>ul > li { float: left; }
-body>div>ul > li a {
+body>div>ul > li a,
+    ul.sub_menu>li>a {
   display: block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
-body>div>ul > li a:hover:not(.active) {
+body>div>ul > li a:hover:not(.active),
+    ul.sub_menu>li>a:hover:not(.active) {
   background-color: #111111;
 }
 .active {
