--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,9 @@
-body { margin: 0; }
+* {
+  cursor: url(http://magnogen.github.io/src/cursor.png), auto;
+}
+body {
+  margin: 0;
+}
 body>div>ul {
   list-style-type: none;
   margin: 0 0 0 0.5em;
