--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,8 @@ body>div>ul > li a:hover:not(.active),
   background-color: #0033cc;
 }
 /* Education page styles: */
-.sub {
+
+.sub {/* colour not working? */
   color: #00dfff;
   font-weight: bold;
   padding: 0 0 0.5em 0;
