--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,16 @@
 * {
-  cursor: url(http://magnogen.github.io/src/cursor.png), auto;
+  cursor: url(https://magnogen.github.io/src/cursor.png), auto;
 }
 body {
   margin: 0;
   height: 100vh;
-  background-color: blue; /* for older browsers that do not support gradients */
-  background-image: linear-gradient(#00a2ff,#0000ff); /*gradient background */
+  background-color: #00a2ff; /* for older browsers that do not support gradients */
+  background-image: linear-gradient(#00a2ff, #0000ff); /*gradient background */
   background-repeat: no-repeat;
   background-attachment: fixed;
   font-family: Verdana, sans-serif;
 }
+
 a:link {
     color: #ffff00;
 }
@@ -19,6 +20,7 @@ a:visited {
 a:active {
     color: #0000ff;
 }
+
 body>div>ul {
   list-style-type: none;
   margin: 0 0 0 0.5em;
@@ -29,14 +31,14 @@ body>div>ul {
   width: 100%;
 }
 body>div>ul > li { float: left; }
-body>div>ul > li a,
-    ul.sub_menu>li>a {
+body>div>ul > li a, ul.sub_menu>li>a {
   display: block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
+
 body>div>ul > li a:hover:not(.active),
     ul.sub_menu>li>a:hover:not(.active) {
   background-color: #111111;
@@ -44,8 +46,8 @@ body>div>ul > li a:hover:not(.active),
 .active {
   background-color: #0033cc;
 }
-/* Education page styles: */
 
+/* Education page styles: */
 .sub {
   color: #000064;
   font-weight: bold;
@@ -54,6 +56,7 @@ body>div>ul > li a:hover:not(.active),
 h2.title {
   color: #0000a8;
 }
+
 .num, .num-brackets {
   display: inline-block;
   margin: 2px 2px 2px 5%;
