--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,8 @@
 body {
   margin: 0;
   height: 100vh;
-  background-color: #00a2ff; /* for older browsers that do not support gradients */
-  background-image: linear-gradient(#00a2ff, #0000ff); /*gradient background */
+  background-color: #0065ff; /* for older browsers that do not support gradients */
+  background-image: linear-gradient(#00a2ff, #0028ff); /*gradient background */
   background-repeat: no-repeat;
   background-attachment: fixed;
   font-family: Verdana, sans-serif;
