--- a/src/style.css
+++ b/src/style.css
@@ -156,7 +156,7 @@ footer main > article:first-child > h3 {
   display: none;
 }
 footer {
-  max-width: calc(1024px -2em);
+  max-width: calc(1024px - 2em);
   margin: 0 auto;
   padding: 1em 2em;
 }
