--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ a {
 .cyan    { color: #a0f0f0 }
 .blue    { color: #a0a0f0 }
 .magenta { color: #f0a0f0 }
+.grey    { color: #a0a0a0 }
 
 code {
   display: block;
