--- a/style.css
+++ b/style.css
@@ -24,7 +24,10 @@ h1, h2, h3, h4, h5, h6 {
 
 table {
   width: max-content;
-  border-collapse:collapse;
+  border-collapse: collapse;
+} td {
+  padding-bottom: 0.25rem;
+  vertical-align: top;
 } td:first-child {
   width: 8rem;
   padding-right: 1rem;
@@ -37,13 +40,14 @@ main {
 
 details {
   text-wrap: balance;
-  width: 66.67%;
-  max-width: 48rem;
-  padding-left: 1rem;
-} details > * {
+  width: 100%;
+  max-width: 32rem;
+  padding: 0 0 1rem 1rem;
+} details > table {
   display: block;
+  max-width: 100%;
 } summary {
-  width: max-content;
+  width: 100%;
   list-style: none;
   position: relative;
   left: -1rem;
