--- a/style.css
+++ b/style.css
@@ -1,30 +1,32 @@
 body {
   max-width: 48rem;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 1rem 2rem;
   font-family: sans-serif;
-  color: #c0c0c0;
+  color: #d0d0d0;
   background: #202020;
+  transition: color 0.2s, background 0.2s;
 }
 
-#bg-wrapper {
-  pointer-events: none;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100vw;
-  overflow: hidden;
+body.light {
+  color: #202020;
+  background: #d0d0d0;
 }
 
-#bg {
-  z-index: -1;
-  transform: rotate(30deg);
-  position: absolute;
-  left: -500vmax;
-  top: -500vmax;
-  width: 1000vmax;
-  height: 1000vmax;
-  image-rendering: pixelated;
+button {
+  transition: color 0.2s, background 0.2s;
+  width: max-content;
+  background: #d0d0d0;
+  color: #202020;
+  border: none;
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+  border-radius: 0.25rem;
+}
+
+body.light button {
+  background: #202020;
+  color: #d0d0d0;
 }
 
 header {
@@ -40,6 +42,8 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 2rem;
 } h2 {
   font-size: 1.5rem;
+} h3 {
+  font-size: 1rem;
 }
 
 table {
@@ -58,33 +62,9 @@ main {
   flex-direction: column;
 }
 
-details {
-  text-wrap: balance;
-  width: 100%;
-  max-width: 32rem;
-  padding: 0 0 1rem 1rem;
-} details > table {
-  display: block;
-  max-width: 100%;
-} summary {
-  width: 100%;
-  list-style: none;
-  position: relative;
-  left: -1rem;
-  cursor: pointer;
-  padding-left: 1rem;
-} summary:before {
-  content: '‣';
-  position: absolute;
-  left: 0;
-  font-weight: 900;
-  transition: transform 0.2s ease;
-} details[open] summary:before {
-  transform: rotate(90deg);
-}
-
 a {
   color: #a0a0f0;
+  transition: color 0.2s;
   text-decoration: underline;
   text-decoration-color: transparent;
 } a:hover, a:focus {
@@ -93,11 +73,41 @@ a {
   content: '↗ ';
 }
 
-.red      { color: #f0a0a0 }
-.yellow   { color: #f0f0a0 }
-.green    { color: #a0f0a0 }
-.cyan     { color: #a0f0f0 }
-.blue     { color: #a0a0f0 }
-.magenta  { color: #f0a0f0 }
-.grey     { color: #a0a0a0 }
-.darkgrey { color: #808080 }
+body.light a {
+  color: #202080
+}
+
+.cards {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+article {
+  width: calc(50% - 1rem);
+}
+
+@media (max-width: 80vh) {
+  article {
+    width: calc(100% - 1rem);
+  }
+}
+
+article > header {
+  display: flex;
+  align-items: flex-end;
+  padding: 0 1rem;
+  height: 8rem;
+  background: #0000f040;
+}
+
+article > main {
+  background: #404040;
+  transition: background 0.2s;
+  padding: 1rem;
+}
+
+body.light article > main {
+  background: #e0e0e0;
+}
