--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   max-width: 48rem;
   margin: 0 auto;
-  padding: 1rem 2rem;
+  padding: 1rem;
   font-family: sans-serif;
   color: #d0d0d0;
   background: #202020;
